fix: ActionMenu display on small screen with safe area (#1573)
We set the container to bottom 0, even if there is a
safearea in order to display the background, but then
we add the padding-bottom to the actionmenu in order
to follow the safe area.

--- a/react/BottomDrawer/styles.styl
+++ b/react/BottomDrawer/styles.styl
@@ -10,8 +10,7 @@
 .BottomDrawer-content
     z-index        $drawer-index
     position       fixed
-    bottom         rem(9)
-    bottom         env(safe-area-inset-bottom) // @stylint ignore
+    bottom         0
     left           0
     right          0
     width          100%
