--- a/stylus/components/action-menu.styl
+++ b/stylus/components/action-menu.styl
@@ -9,7 +9,9 @@ $actionmenu
     @extend $popover
     color var(--primaryTextColor)
     --iconColor: var(--actionMenuIconColor)
-
+    padding-bottom rem(9)
+    padding-bottom env(safe-area-inset-bottom)
+    
     hr
         margin-top 0
 
